<resources>
    <string name="app_name">MenoFeme</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_sobre">Sobre nós</string>
    <string name="menu_contato">Contatos</string>
    <string name="menu_privacidade">Privacidade</string>
    <string name="menu_tcle">TCLE</string>
    <string name="menu_logoff">Logoff</string>
    <string name="menu_sair">Sair</string>
    <string name="menu_excluir">Excluir conta</string>
    <string name="menqol">Menqol</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="menu_estagio">Estágio</string>
    <string name="menu_dados">Dados Pessoais</string>
    <string name="menu_Sair">Sair da aplicação</string>
    <string name="menu_comunicar">Comunicação</string>
    <string name="menu_etica">Aspectos Éticos</string>
    <string name="menu_app">Meno Feme</string>
    <string name="Debug">Teste</string>
    <string name="nome_usuaria"> </string>
    <string name="menuTitle">Menu</string>
    <string name="debugNasc">Nascimento</string>
    <string name="debugEtnia">Escolha uma opção</string>
    <string name="Q1Est">Por favor escolha uma opção para a primeira pergunta</string>
    <string name="Q2Est">Por favor escolha uma opção para a segunda ou em caso de FSH >= 20, insira o valor no campo indicado</string>
    <string name="Quest2Tema1"><b><i>Facilidade de uso e satisfação</i></b></string>
    <string name="Quest2Tema2"><b><i>Arranjo de informações do sistema</i></b></string>
    <string name="Quest2Tema3"><b><i>Utilidade</i></b></string>
    <string name="txtTcle">Termo de consentimento livre e esclarecido</string>
    <string name="txtAceiteTcle">Eu, declaro que concordo em participar desta pesquisa.</string>
    <string name="txtAceitePrivacidade">Eu, declaro que entendo e concordo com a Política de privacidade deste aplicativo</string>
    <string name="txtAceitePrivacidade1">Política de privacidade</string>
    <string name="txtPrivacidade">Política de privacidade</string>
    <string name="txtNasc">Informe a data do seu nascimento</string>
    <string name="txtEtnia">Etnia:</string>
    <string name="txtJuliana"><b>Doutoranda:</b>Juliana Nobre da Silva</string>
    <string name="txtSilvia"><b>Orientadora:</b>Silvia Cristina Martini</string>
    <string name="txtTese"><b>Tese:</b> <i>Aplicativo móvel para orientação de mulheres no período do climatério</i></string>
    <string name="txtApp"> <i>Esse aplicativo foi desenvolvido a partir de uma pesquisa de doutorado da Universidade de Mogi das Cruzes com o objetivo de orientar mulheres no período do climatério</i></string>
    <string name="txtCadastroOk">Cadastro realizado com sucesso</string>
    <string name="txtBemVinda">Seja Bem-vinda,</string>
    <string name="txtTermo">Leia nossa Política de Privacidade e nosso Termo de Consentimento Livre e Esclarecido para saber mais sobre a maneira como protegemos suas informações pessoais. Recomendamos que você participe do programa de melhoria e compartilhe suas estatísticas de uso para nos ajudar a melhorar o MenoFeme.</string>
    <string name="txtTermoN">Para utilizar essa função os termos de Política de Privacidade  e Termo de Consentimento Livre e Esclarecido devem ser aceitos!!! Você aceita os termos? </string>
    <string name="txtExcluir">Você confirma a exclusão da sua conta nesse aplicativo?</string>
    <string name="txtUltima">Sua última menstruação foi há mais de um ano?</string>
    <string name="txtFsh">Qual o seu nível de FSH?</string>
    <string name="txtAtraso">Você tem apresentado atraso menstrual de no mínimo 7 dias ou ausência de mestruação em meses alternados?</string>
    <string name="txtEst1">Parece que você está vivenciando o estágio da <b><i>PÓS-MENOPAUSA</i></b></string>
    <string name="txtEst2">Parece que você está vivenciando o estágio da <b><i>PERIMENOPAUSA</i></b></string>
    <string name="txtEst3">Parece que você está vivenciando o estágio <b><i>REPRODUTIVO</i></b></string>
    <string name="txtObs1">O que é o climatério e menopausa?</string>
    <string name="txtObs2">Qual é a idade em que comumente se entra no climatério?</string>
    <string name="txtObs3">Quais mudanças podem ocorrer neste período?</string>
    <string name="txtObs4">Como passar por essa fase da melhor forma?</string>
    <string name="txtSint1">Afrontamento (calorão)</string>
    <string name="txtSint2">Sintomas vaginais    </string>
    <string name="txtSint3">Sintomas urinários    </string>
    <string name="txtSint4">Fadiga      </string>
    <string name="txtSint5">Diminuição da libido   </string>
    <string name="txtSint6">Problemas psicológicos e neurológicos</string>
    <string name="txtSint7">Dores      </string>
    <string name="txtSint8">Mudanças na pele e cabelo</string>
    <string name="txtTratamento">Existem algumas formas de tratar os distúrbios da menopausa.</string>
    <string name="txtTratamento1">A escolha de qual é o melhor tratamento para cada mulher deve ser discutida com o médico ginecologista de forma individualizada, levando em consideração seus sintomas, histórico médico e preferências.</string>
    <string name="txtTipo1">Medicamentos não hormonais</string>
    <string name="txtTipo2">Tratamentos hormonais</string>
    <string name="txtTipo3">Tratamentos alternativos ou complementares</string>
    <string name="txtQuestionario1"><b><i>MenQol:</i></b>Questionário Específico de qualidade de vida na menopausa</string>
    <string name="txtQuestionario2"><b><i>MauQ:</i></b> Questionário de usabilidade de aplicativos em saúde</string>
    <string name="txtObjQuest1"><b><i>Objetivo da aplicação:</i></b> Verificar a evolução dos sintomas antes e após a exposição das orientações do aplicativo</string>
    <string name="txtMensagemQuest1">Por favor, responda a este questionário para que possamos avaliar a evolução dos seus sintomas ao longo do tempo.</string>
    <string name="txtObjQuest2"><b><i>Objetivo da aplicação: </i></b>Verificar a facilidade de uso do aplicativo</string>
    <string name="txtMensagemQuest2">Queremos saber como foi sua experiência com este aplicativo. Responda a este questionário para avaliá-lo.</string>
    <string name="txtDefQuest"><b><i>Escala de pontos:</i></b></string>
    <string name="txtQ1Q1">Ondas de calor</string>
    <string name="txtQ1Q2">Suores noturnos</string>
    <string name="txtQ1Q3">Suor excessivo (dia)</string>
    <string name="txtQ1Q4">Estar insatisfeita com a vida pessoal</string>
    <string name="txtQ1Q5">Sentindo-se ansiosa ou nervosa</string>
    <string name="txtQ1Q6">Experimentando memória fraca</string>
    <string name="txtQ1Q7">Sentindo-se menos produtiva nas atividades diárias</string>
    <string name="txtQ1Q8">Sentindo-se deprimida</string>
    <string name="txtQ1Q9">Sendo impaciente com as outras pessoas</string>
    <string name="txtQ1Q10">Sensação de querer ficar sozinha</string>
    <string name="txtQ1Q11">Flatulência (gases) ou dores abdominais</string>
    <string name="txtQ1Q12">Dores musculares e nas articulações</string>
    <string name="txtQ1Q13">Sentindo-se cansada ou desgastada</string>
    <string name="txtQ1Q14">Dificuldade para dormir</string>
    <string name="txtQ1Q15">Dores na nuca ou na cabeça</string>
    <string name="txtQ1Q16">Diminuição da força física</string>
    <string name="txtQ1Q17">Diminuição da resistência</string>
    <string name="txtQ1Q18">Sentindo falta de energia</string>
    <string name="txtQ1Q19">Ressecamento da pele</string>
    <string name="txtQ1Q20">Ganho de peso</string>
    <string name="txtQ1Q21">Aumento de pêlos faciais</string>
    <string name="txtQ1Q22">Mudança na textura ou no tom da pele</string>
    <string name="txtQ1Q23">Sentindo-se inchada</string>
    <string name="txtQ1Q24">Dor lombar</string>
    <string name="txtQ1Q25">Tem urinado com mais frequência</string>
    <string name="txtQ1Q26">Tem urinado involuntariamente ao rir ou tossir</string>
    <string name="txtQ1Q27">Diminuição do desejo sexual</string>
    <string name="txtQ1Q28">Secura vaginal durante a relação sexual</string>
    <string name="txtQ1Q29">Evitando intimidade com o parceiro</string>
    <string name="txtQ1Q30">Diminuição da força física</string>
    <string name="txtQ2Q1">O aplicativo foi fácil de usar</string>
    <string name="txtQ2Q2">Eu gosto da interface do aplicativo</string>
    <string name="txtQ2Q3">As informações no aplicativo estavam bem-organizadas, para que eu pudesse encontrar facilmente as informações que precisava</string>
    <string name="txtQ2Q4">Eu me sinto confortável usando este aplicativo</string>
    <string name="txtQ2Q5">A quantidade de tempo envolvida no uso deste aplicativo foi adequada para mim</string>
    <string name="txtQ2Q6">Eu usaria este aplicativo novamente</string>
    <string name="txtQ2Q7">No geral, estou satisfeito com este aplicativo</string>
    <string name="txtQ2Q8">Este aplicativo me forneceu informações relevantes</string>
    <string name="txtQ2Q9">A navegação foi consistente ao se mover entre as telas</string>
    <string name="txtQ2Q10">A interface do aplicativo me permitiu usar todas as funções (como inserir informações, responder às perguntas, visualizar informações) oferecidas pelo aplicativo</string>
    <string name="txtQ2Q11">Este aplicativo tem todas as funções e recursos que eu espero que tenha</string>
    <string name="txtQ2Q12">O aplicativo seria útil para minha saúde e bem-estar</string>
    <string name="txtQ2Q13">O aplicativo me incentivou a procurar serviços de saúde</string>
    <string name="txtQ2Q14">O aplicativo me ajudou a gerenciar minha saúde de forma eficaz</string>
    <string name="txtQ2Q15">O aplicativo me incentivou a relatar minhas queixas ao meu médico</string>
    <string name="txtQ2Q16">Usando o aplicativo, fui encorajada a interagir com meu médico</string>
    <string name="txtQ2Q17">Eu me senti confiante de que as minhas informações inseridas no aplicativo seriam tratadas de forma confidencial, e que meus dados estariam seguros</string>
    <string name="txtQ2Q18">Senti-me à vontade para levar ao meu médico os relatórios oferecidos pelo aplicativo, como por exemplo os dados do diário de eventos e o questionário de qualidade de vida da menopausa</string>
    <string name="hintEmail">Digite seu e-mail</string>
    <string name="hintSenha">Digite sua senha</string>
    <string name="btnCadastrar">Cadastrar</string>
    <string name="btnEntrar">Entrar</string>
    <string name="btnSair">Sair</string>
    <string name="btnVoltar">Voltar</string>
    <string name="btnEstagio">Em qual estágio estou?</string>
    <string name="btnOrientacoes">Orientações gerais</string>
    <string name="btnSintomas">Como  minimizar os sintomas?</string>
    <string name="btnTratamento">Tratamentos existentes</string>
    <string name="btnQuestionario">Questionários</string>
    <string name="btnDiario">Diário</string>
    <string name="txtTituloContato">Contatos</string>
    <string name="txtEmail"><b><i>E-mail:</i></b></string>
    <string name="txtEmail2">menofemeappbrasil@gmail.com</string>
    <string name="txtInstagram"><b><i>Instagram:</i></b> </string>
    <string name="txtInstagram2"><a href="https://www.instagram.com/menofeme_menopausa?utm_source=qr&amp;igsh=MTRmZ2ZpbXZzb3cxcA==">Clique aqui</a></string>
    <string name="txtFacebook"><b><i>Facebook:</i></b></string>
    <string name="txtFacebook2"><a href="https://www.facebook.com/profile.php?id=61550045862839&amp;mibextid=ZbWKwL">Clique aqui</a></string>
</resources>