<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="@string/menu_dados">
            <menu>
                <item
                    android:id="@+id/nav_perfil"
                    android:icon="@drawable/ic_perfil"
                    android:title="@string/menu_perfil"/>
                <item
                    android:id="@+id/nav_privacidade"
                    android:icon="@drawable/ic_privacidade"
                    android:title="@string/menu_privacidade" />
                <item
                    android:id="@+id/nav_excluir"
                    android:icon="@drawable/ic_excluir"
                    android:title="@string/menu_excluir"/>
            </menu>
        </item>

        <item android:title="@string/menu_app">
            <menu>
                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/ic_app"
                    android:title="@string/menu_home" />
            </menu>
        </item>

        <item android:title="@string/menu_etica">
            <menu>
                <item
                    android:id="@+id/nav_tcle"
                    android:icon="@drawable/ic_etica"
                    android:title="@string/menu_tcle" />
            </menu>
        </item>

        <item android:title="@string/menu_comunicar">
            <menu>
                <item
                    android:id="@+id/nav_sobre"
                    android:icon="@drawable/ic_sobre"
                    android:title="@string/menu_sobre" />
                <item
                    android:id="@+id/nav_contato"
                    android:icon="@drawable/ic_contato"
                    android:title="@string/menu_contato"/>
            </menu>
        </item>

        <item android:title="@string/menu_Sair">
            <menu>
                <item
                    android:id="@+id/nav_logoff"
                    android:icon="@drawable/ic_logoff"
                    android:title="@string/menu_logoff" />
                <item
                    android:id="@+id/nav_sair"
                    android:icon="@drawable/ic_sair"
                    android:title="@string/menu_sair" />
            </menu>
        </item>
    </group>
</menu>