<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.lavita.menofeme.view.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.lavita.menofeme.view.ui.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" />
    <fragment
        android:id="@+id/nav_sobre"
        android:name="com.lavita.menofeme.view.ui.sobre.SobreFragment"
        android:label="@string/menu_sobre"
        tools:layout="@layout/fragment_sobre"/>

    <fragment
        android:id="@+id/nav_tcle"
        android:name="com.lavita.menofeme.view.ui.tcle1.TcleFragment"
        android:label="@string/menu_tcle"
        tools:layout="@layout/fragment_tcle"/>

    <fragment
        android:id="@+id/nav_privacidade"
        android:name="com.lavita.menofeme.view.ui.tcle1.TcleFragment"
        android:label="@string/menu_privacidade"
        tools:layout="@layout/fragment_tcle"/>
</navigation>