<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fundoapp"
    tools:context=".view.Login">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textColor="@color/padrão"
        android:gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="200dp"/>

    <EditText
        android:id="@+id/txtEmailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:hint="@string/hintEmail"
        android:textColorHint="@color/black"
        android:inputType="textEmailAddress"
        android:textSize="18sp"
        android:autofillHints=""
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/txtSenhaLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:hint="@string/hintSenha"
        android:textColorHint="@color/black"
        android:inputType="numberPassword"
        android:textSize="18sp"
        android:autofillHints=""
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        tools:ignore="VisualLintTextFieldSize" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnEntrarLogin"
        android:layout_width="124dp"
        android:layout_height="48dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/btn1"
        android:text="@string/btnEntrar"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textColor="@color/padrão"
        android:layout_gravity="center"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCadastrarLogin"
        android:layout_width="124dp"
        android:layout_height="48dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/btn1"
        android:text="@string/btnCadastrar"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textColor="@color/padrão"
        android:layout_gravity="center"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSair"
        android:layout_width="124dp"
        android:layout_height="48dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/btn1"
        android:text="@string/btnSair"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textColor="@color/padrão"
        android:layout_gravity="center"/>


</LinearLayout>