<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".view.ui.sobre.SobreFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtApp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        tools:ignore="VisualLintLongText" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtTese"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtJuliana"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="20dp" />

    <ImageView
        android:id="@+id/imageJuliana"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/juliana"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtSilvia"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="30dp" />

    <ImageView
        android:id="@+id/imageSilvia"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/silvia"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        tools:ignore="ContentDescription" />


</LinearLayout>